product list styles

--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -3,3 +3,32 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
 }
+
+.productItem {
+    position: relative;
+}
+
+.productItem div {
+    display: none;
+}
+
+.productItem:hover div {
+    display: block;
+    position: absolute;
+    top: 60%;
+    left: 30%;
+    width: 100%;
+}
+
+.productItem:hover div a {
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    background-color: #1a1a1a;
+    color: #fff;
+    font-weight: 700;
+}
+
+.productItem:hover div a:hover {
+    background-color: #af052d;
+}
