--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ header {
     top: 0;
 }
 
-.collectionHeader {
+h2.collectionHeader {
     text-align: center;
     margin-top: 60px;
 }
@@ -55,4 +55,42 @@ header {
     margin: 0 auto;
     border-bottom: 3px solid #af052d;
     margin-bottom: 50px;
+}
+
+.ads {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    margin: 30px 0;
+}
+
+.ads img {
+    width: 100%;
+}
+
+.ads > div {
+    position: relative;
+}
+
+.ads div div {
+    position: absolute;
+    right: 30px;
+    top: 0;
+}
+
+p.collectionHeader {
+    text-align: center;
+    margin: 70px 0;
+}
+
+p.collectionHeader a {
+    text-decoration: none;
+    padding: 12px 30px;
+    border-radius: 3px;
+    background-color: #af052d;
+    color: #fff;
+}
+
+p.collectionHeader a:hover {
+    background-color: #1a1a1a;
 }
