--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,24 @@
 header {
-    min-height: 100px;
     background-color: #1a1a1a;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #eee;
+    padding: 0 60px;
+}
+
+header ul {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+}
+
+header ul li a {
+    color: #eee;
+    text-decoration: none;
+    font-size: 1.1em;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-right: 20px;
 }
