basic inventory and item

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@ header {
     align-items: center;
     justify-content: space-between;
     color: #eee;
-    padding: 0 60px;
+    padding: 20px 60px;
 }
 
 header ul {
